Fix the spacing on the Nav bar

--- a/src/components/Nav.module.css
+++ b/src/components/Nav.module.css
@@ -2,14 +2,14 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
-  padding: 1em 3em 1.2em 3em;
+  padding: 1em 6em 1.2em 6em;
   gap: 1em;
 }
 
 .wrapper {
   display: flex;
   align-items: baseline;
-  gap: 1em;
+  gap: 2em;
 }
 
 .im_icon {
@@ -30,7 +30,7 @@
 
 .navigation ul {
   display: flex;
-  gap: 1em;
+  gap: 3em;
   list-style: none;
   margin-bottom: auto;
 }
